2006-04-28  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc.mk (sdcc-docs): create doc dir, it's no longer
	created by 'make install' unless --enable-doc is configured
	(install): use DESTDIR instead of tweaking
	suffic, docdir and datadir
	* lib/bootstrap (generate-setup): files are installed in
	$(BUILDIR)/[prefix|datadir|docdir] =
	$(HOME)/build/sdcc-build/build/i586-mingw32msvc/sdcc/sdcc/*
	The first /sdcc/ is from BUILDDIR, the 2nd from [prefix|...].
	* local/x86-linux1-i586-mingw32msvc.mk,
	* local/x86-linux2-i586-mingw32msvc.mk,
	* local/saturn.juju.net.nz-i386-mingw32msvc.mk: SDCCINSTALLFLAGS are
	no longer needed to tweak install directories

2006-04-24  Bernhard Held <bernhard AT bernhardheld.de>

	* local/sapphire-i586-mingw32msvc.mk,
	  local/x86-linux1-i586-mingw32msvc.mk,
	  local/x86-linux2-i586-mingw32msvc.mk,
	  local/saturn.juju.net.nz-i386-mingw32msvc.mk: renamed
	  --disable-device-lib-build in --disable-device-lib
	* components/sdcc.mk: build of ucsim's sz80 is now enabled by default

2006-04-21 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh, lib/fetch.mk, components/sdcc-extra.mk:
	  use "svn export" instead "svn co" to save disk space.
	  Thanks to Jim Paris.

2006-04-20 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh, README,
	  components/sdcc-extra.mk, components/sdcc.mk,
	  lib/bootstrap.mk, lib/fetch.mk, lib/src-archive.mk, lib/variables.mk:
	  nightly build migration from CVS to Subversion

2006-01-28 Borut Razem <borut.razem AT siol.net>

	* local/x86-linux1.mk, local/x86-linux1-i586-mingw32msvc.mk: added
	* x86-linux2.cf.sourceforge.net-i586-mingw32msvc.mk,
	  x86-linux2.cf.sourceforge.net.mk,
	  usf-cf-x86-linux-2-i586-mingw32msvc.mk,
	  usf-cf-x86-linux-2.cf.sourceforge.net-i586-mingw32msvc.mk,
	  usf-cf-x86-linux-2.cf.sourceforge.net.mk,
	  usf-cf-x86-linux-2.mk,
	  usf-cf-x86-linux-1-i586-mingw32msvc.mk,
	  usf-cf-x86-linux-1.mk: removed
